--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@remix-run/node": "^2.15.0",
+    "@remix-run/react": "^2.15.0",
+    "@remix-run/serve": "^2.15.0",
+    "isbot": "^4.4.0",
     "next": "~15.2.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
@@ -21,19 +26,27 @@
     "@nx/js": "21.3.11",
     "@nx/next": "21.3.11",
     "@nx/playwright": "21.3.11",
+    "@nx/remix": "^21.3.11",
+    "@nx/vite": "21.3.11",
+    "@nx/web": "21.3.11",
     "@nx/workspace": "21.3.11",
     "@playwright/test": "^1.36.0",
+    "@remix-run/dev": "^2.15.0",
+    "@remix-run/testing": "^2.15.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.38",
     "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^30.0.0",
     "@types/node": "18.16.9",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
-    "autoprefixer": "10.4.13",
+    "autoprefixer": "^10.4.13",
     "babel-jest": "^30.0.2",
     "eslint": "^9.8.0",
     "eslint-config-next": "^15.2.4",
@@ -47,14 +60,16 @@
     "jest-environment-jsdom": "^30.0.2",
     "jest-util": "^30.0.2",
     "nx": "21.3.11",
-    "postcss": "8.4.38",
+    "postcss": "^8.4.38",
     "prettier": "^2.6.2",
-    "tailwindcss": "3.4.3",
+    "shadcn-ui": "^0.9.5",
+    "tailwindcss": "^3.4.3",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "vite": "^5.0.0"
   },
   "workspaces": [
     "apps/*"
