--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
   "files": [],
   "references": [
     {
-      "path": "./apps/info-card-e2e"
+      "path": "./apps/link-tree-e2e"
     },
     {
-      "path": "./apps/info-card"
+      "path": "./apps/link-tree"
     }
   ]
 }
