--- a/apps/link-tree/package.json
+++ b/apps/link-tree/package.json
@@ -2,7 +2,12 @@
   "name": "@ialannunez/link-tree",
   "private": true,
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "build": "remix build",
+    "dev": "remix dev",
+    "start": "remix-serve build/index.js",
+    "preview": "remix-serve build/index.js"
+  },
   "sideEffects": false,
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
