Update start command in link-tree project configuration to use Vite

--- a/apps/link-tree/project.json
+++ b/apps/link-tree/project.json
@@ -35,7 +35,7 @@
     "start": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "remix-serve build",
+        "command": "vite start",
         "cwd": "apps/link-tree"
       },
       "dependsOn": ["build"]
