--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0",
-    "vite": "^5.0.0"
+    "typescript-eslint": "^8.29.0"
   },
   "workspaces": [
     "apps/*"
