Changes to enable cloudflare build

--- a/apps/link-tree/package.json
+++ b/apps/link-tree/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
-    "start": "remix-serve build/server/index.js"
+    "start": "remix-serve build/server/index.js",
+    "dev:wrangler": "wrangler dev"
   },
   "sideEffects": false,
   "dependencies": {
