Fix CSS loading issue by adding KV asset handler for static files

--- a/apps/link-tree/package.json
+++ b/apps/link-tree/package.json
@@ -2,14 +2,10 @@
   "name": "@ialannunez/link-tree",
   "private": true,
   "type": "module",
-  "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "start": "remix-serve build/server/index.js",
-    "dev:wrangler": "wrangler dev"
-  },
+  "scripts": {},
   "sideEffects": false,
   "dependencies": {
+    "@cloudflare/kv-asset-handler": "^0.4.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@remix-run/cloudflare": "^2.15.0",
