--- a/apps/link-tree/package.json
+++ b/apps/link-tree/package.json
@@ -14,14 +14,24 @@
     "clsx": "^2.1.1",
     "isbot": "^4.4.0",
     "lucide-react": "^0.539.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.0",
-    "@types/react": "19.0.0",
-    "@types/react-dom": "19.0.0",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.38",
+    "shadcn-ui": "^0.9.5",
+    "jest-environment-jsdom": "^30.0.2",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7"
   }
 }
