--- a/apps/link-tree/package.json
+++ b/apps/link-tree/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@remix-run/cloudflare": "^2.15.0",
     "@remix-run/node": "^2.15.0",
     "@remix-run/react": "^2.15.0",
     "@remix-run/serve": "^2.15.0",
@@ -32,6 +33,7 @@
     "shadcn-ui": "^0.9.5",
     "jest-environment-jsdom": "^30.0.2",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wrangler": "^3.78.12"
   }
 }
