Update dependencies and refactor entry server for improved bot and browser request handling

--- a/apps/link-tree/project.json
+++ b/apps/link-tree/project.json
@@ -43,7 +43,7 @@
     "start": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "wrangler serve",
+        "command": "remix-serve build/server/index.js",
         "cwd": "apps/link-tree"
       }
     },
