--- a/apps/link-tree/package.json
+++ b/apps/link-tree/package.json
@@ -26,12 +26,13 @@
     "@testing-library/jest-dom": "6.4.2",
     "@testing-library/react": "16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^24.3.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "autoprefixer": "^10.4.13",
+    "jest-environment-jsdom": "^30.0.2",
     "postcss": "^8.4.38",
     "shadcn-ui": "^0.9.5",
-    "jest-environment-jsdom": "^30.0.2",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animate": "^1.0.7",
     "wrangler": "^3.78.12"
