Add production environment configuration and enhance asset handling in Cloudflare worker to serve static assets directly from ASSETS binding

--- a/apps/link-tree/wrangler.toml
+++ b/apps/link-tree/wrangler.toml
@@ -1,9 +1,15 @@
+[env.production]
 name = "linktree"
 main = "cloudflare/worker.js"
 compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 
-[site]
+[env.production.vars]
+NODE_ENV = "production"
+
+# Use ASSETS binding instead of [site]
+[[env.production.assets]]
+binding = "ASSETS"
 bucket = "build/client"
 
 [[routes]]
