--- a/apps/link-tree/wrangler.toml
+++ b/apps/link-tree/wrangler.toml
@@ -4,7 +4,7 @@ compatibility_date = "2024-09-23"
 compatibility_flags = ["nodejs_compat"]
 
 # Use ASSETS binding for static files
-[[assets]]
+[assets]
 binding = "ASSETS"
 directory = "build/client"
 
