Pushing new command to upload a version

--- a/apps/link-tree/project.json
+++ b/apps/link-tree/project.json
@@ -55,6 +55,14 @@
       },
       "dependsOn": ["build:cloudflare"]
     },
+    "deploy:version": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler versions upload",
+        "cwd": "apps/link-tree"
+      },
+      "dependsOn": ["build:cloudflare"]
+    },
     "typecheck": {
       "executor": "nx:run-commands",
       "options": {
