Fixed upload-version command with wrangler

--- a/apps/link-tree/project.json
+++ b/apps/link-tree/project.json
@@ -55,10 +55,18 @@
       },
       "dependsOn": ["build:cloudflare"]
     },
+    "upload:version": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler versions upload",
+        "cwd": "apps/link-tree"
+      },
+      "dependsOn": ["build:cloudflare"]
+    },
     "deploy:version": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "wrangler versions upload --",
+        "command": "wrangler versions deploy",
         "cwd": "apps/link-tree"
       },
       "dependsOn": ["build:cloudflare"]
