Replaced useTheme hook

--- a/apps/link-tree/tsconfig.app.json
+++ b/apps/link-tree/tsconfig.app.json
@@ -26,6 +26,8 @@
     "app/**/*.tsx",
     "app/**/*.js",
     "app/**/*.jsx",
+    "app/providers/**/*.ts",
+    "app/providers/**/*.tsx",
     "**/.server/**/*.ts",
     "**/.server/**/*.tsx",
     "**/.client/**/*.ts",
