--- a/apps/link-tree/package.json
+++ b/apps/link-tree/package.json
@@ -6,7 +6,11 @@
   "sideEffects": false,
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@remix-run/cloudflare": "^2.15.0",
     "@remix-run/node": "^2.15.0",
