--- a/package.json
+++ b/package.json
@@ -13,20 +13,28 @@
     "@nx/eslint": "21.3.11",
     "@nx/eslint-plugin": "21.3.11",
     "@nx/jest": "21.3.11",
-    "@nx/js": "21.3.11",
+    "@nx/js": "21.4.0",
     "@nx/playwright": "21.3.11",
     "@nx/remix": "^21.3.11",
-    "@nx/vite": "21.3.11",
-    "@nx/web": "21.3.11",
+    "@nx/vite": "21.4.0",
+    "@nx/web": "21.4.0",
     "@nx/workspace": "21.3.11",
     "@playwright/test": "^1.36.0",
+    "@remix-run/dev": "^2.15.0",
+    "@remix-run/testing": "^2.15.0",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@swc/jest": "~0.2.38",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^30.0.0",
     "@types/node": "18.16.9",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "babel-jest": "^30.0.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
@@ -36,6 +44,7 @@
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^30.0.2",
+    "jest-environment-jsdom": "^30.0.2",
     "jest-util": "^30.0.2",
     "nx": "21.3.11",
     "prettier": "^2.6.2",
@@ -43,7 +52,8 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "vite": "^5.0.0"
   },
   "workspaces": [
     "apps/*"
