--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -5,13 +5,20 @@
   "scripts": {},
   "sideEffects": false,
   "dependencies": {
+    "@lucide/lab": "^0.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@remix-run/node": "^2.15.0",
     "@remix-run/react": "^2.15.0",
     "@remix-run/serve": "^2.15.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "isbot": "^4.4.0",
+    "lucide-react": "^0.542.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
+    "rxjs": "^7.8.2",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
