--- a/apps/portfolio/package.json
+++ b/apps/portfolio/package.json
@@ -6,6 +6,7 @@
   "sideEffects": false,
   "dependencies": {
     "@lucide/lab": "^0.1.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@remix-run/node": "^2.15.0",
     "@remix-run/react": "^2.15.0",
@@ -19,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "rxjs": "^7.8.2",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.0",
