Update package.json and package-lock.json to include @remix-run/cloudflare and wrangler dependencies; add build and deploy commands for Cloudflare integration in project.json

--- a/apps/portfolio/project.json
+++ b/apps/portfolio/project.json
@@ -19,6 +19,39 @@
         "cwd": "apps/portfolio"
       },
       "outputs": ["{projectRoot}/build"]
+    },
+    "build:cloudflare": {
+      "executor": "nx:run-commands",
+      "options": {
+        "commands": ["node cloudflare/build-cloudflare.js", "remix vite:build"],
+        "cwd": "apps/portfolio",
+        "parallel": false
+      },
+      "outputs": ["{projectRoot}/build"]
+    },
+    "deploy": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler deploy",
+        "cwd": "apps/portfolio"
+      },
+      "dependsOn": ["build:cloudflare"]
+    },
+    "upload:version:dev": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler versions upload --env development",
+        "cwd": "apps/portfolio"
+      },
+      "dependsOn": ["build:cloudflare"]
+    },
+    "deploy:version:dev": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "wrangler versions deploy --env development --yes",
+        "cwd": "apps/portfolio"
+      },
+      "dependsOn": ["build:cloudflare"]
     }
   }
 }
